[package]
name = "shithead_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
prost = "0.11.9"
rand = "0.8.5"
serde = "1.0.160"
serde_json = "1.0.96"
strum = "0.24.1"
strum_macros = "0.24.3"
surrealdb = { version = "1.0.0-beta.9+20230402", features = ["kv-rocksdb"] }
tokio = { version = "1.28.0", features = ["full"] }
tonic = "0.9.2"

[build-dependencies]
tonic-build = "0.9.2"
